# Jalium.UI

./: .gitignore  Directory.Build.props  README.md
src/managed/Jalium.UI.Build/: Jalium.UI.Build.csproj
src/managed/Jalium.UI.Controls/: AppBuilder.cs  Application.Host.cs  Application.cs  ArrowIcons.cs  Border.cs  Calendar.cs  ComboBox.cs  ContentDialog.cs  ContextMenuService.cs  Control.cs  DataGrid.cs  DefinitionBase.cs  DynamicRenderer.cs  EditControl.cs  Grid.cs  Image.cs  InkCanvas.cs  Jalium.UI.Controls.csproj  JaliumApp.cs  Label.cs  ListBox.cs  Markdown.cs  MediaAppBuilderExtensions.cs  MediaElement.cs  Menu.cs  PasswordBox.cs  QRCode.cs  RichTextBox.cs  RowDefinition.cs  ScrollViewer.cs  Slider.cs  TabControl.cs  Terminal.cs  TextBlock.cs  TextBox.cs  ToolTip.cs  TreeSelector.cs  TreeView.cs  Viewbox.cs  VirtualizingWrapPanel.cs  (+4 more)
src/managed/Jalium.UI.Core/: Binding.cs  BindingValueCoercion.cs  DataTemplate.cs  DependencyObject.cs  DependencyProperty.cs  FrameworkElement.cs  FrameworkPropertyMetadata.cs  PropertyAccessorRegistry.cs  ResourceDictionary.cs  Style.cs  UIElement.Touch.cs  UIElement.Transitions.cs  UIElement.cs  Visual.cs
src/managed/Jalium.UI.Input/: FocusEvents.cs  Jalium.UI.Input.csproj  Pointer.cs  StylusEvents.cs  Touch.cs  TouchHelper.cs
src/managed/Jalium.UI.Interop/: NativeBrush.cs  NativeMethods.cs  NativeTextFormat.cs  RenderTarget.cs  RenderTargetDrawingContext.cs  SoftwareVectorRasterizer.cs
src/managed/Jalium.UI.Media/: AnimatedBitmap.cs  AudioPlayer.cs  D3DImage.cs  (+6 more)
src/native/: CMakeLists.txt
src/native/jalium.native.aot/: aot_register.cpp
src/native/jalium.native.core/: CMakeLists.txt  jalium.native.core.static.vcxproj  jalium.native.core.vcxproj
src/native/jalium.native.core/include/: jalium_api.h  jalium_backend.h  jalium_bitmap_stats.h  jalium_flatten.h  jalium_impeller_shapes.h  jalium_impeller_stroke.h  jalium_path_cache.h  jalium_path_stats.h  jalium_rendering_engine.h  jalium_stencil_path.h  jalium_text_options.h  jalium_video_surface.h
src/native/jalium.native.core/src/: brush.cpp  jalium_bitmap_stats.cpp  jalium_path_cache.cpp  jalium_path_stats.cpp  jalium_stencil_path.cpp  jalium_text_options.cpp  render_target.cpp  video_surface.cpp
src/native/jalium.native.d3d12/: CMakeLists.txt  jalium.native.d3d12.static.vcxproj  jalium.native.d3d12.vcxproj
src/native/jalium.native.d3d12/include/: d3d12_backend.h  d3d12_direct_renderer.h  d3d12_glyph_atlas.h  d3d12_impeller_engine.h  d3d12_render_target.h  d3d12_resources.h  d3d12_shader_bytecode.h  d3d12_vello.h  d3d12_vello_engine.h
src/native/jalium.native.d3d12/shaders/: bitmap_quad.ps.hlsl  bitmap_text.ps.hlsl  rounded_clip.hlsli  sdf_rect.ps.hlsl  triangle.ps.hlsl  vello_flatten.cs.hlsl
src/native/jalium.native.d3d12/shaders/compiled/: bitmap_quad.ps.cso  bitmap_text.ps.cso  sdf_rect.disasm.txt  sdf_rect.ps.cso  triangle.ps.cso
src/native/jalium.native.d3d12/src/: d3d12_backend.cpp  d3d12_bitmap.cpp  d3d12_direct_renderer.cpp  d3d12_glyph_atlas.cpp  d3d12_impeller_engine.cpp  d3d12_path_pipeline.cpp  d3d12_render_target.cpp  d3d12_vello.cpp  d3d12_vello_engine.cpp  d3d12_video_surface.cpp
src/native/jalium.native.demo.memprobe/: CMakeLists.txt
src/native/jalium.native.demo.memprobe/src/: main.cpp
src/native/jalium.native.media.android/src/: and_media_exports.cpp
src/native/jalium.native.media.core/: CMakeLists.txt  jalium.native.media.core.static.vcxproj
src/native/jalium.native.media.core/include/: jalium_audio.h  jalium_media.h
src/native/jalium.native.media.core/src/audio/: audio_decoder.cpp  audio_device.cpp  audio_init.cpp  audio_internal.h  audio_stats.cpp  decoder_flac.cpp  decoder_mp3.cpp  decoder_vorbis.cpp  decoder_wav.cpp  miniaudio_backend.cpp
src/native/jalium.native.media.windows/: CMakeLists.txt  jalium.native.media.windows.static.vcxproj  jalium.native.media.windows.vcxproj
src/native/jalium.native.media.windows/include/: win_mf_aac_decoder.h  win_mf_video_decoder.h  win_wic_decoder.h
src/native/jalium.native.media.windows/src/: win_media_exports.cpp  win_media_init.cpp  win_mf_aac_decoder.cpp  win_mf_video_decoder.cpp  win_wic_decoder.cpp
src/native/jalium.native.metal/include/: metal_backend.h
src/native/jalium.native.metal/src/: metal_backend.cpp
src/native/jalium.native.software/include/: software_backend.h
src/native/jalium.native.software/src/: software_backend.cpp
src/native/jalium.native.vulkan/: CMakeLists.txt  jalium.native.vulkan.static.vcxproj  jalium.native.vulkan.vcxproj
src/native/jalium.native.vulkan/include/: text_cache.h  vulkan_backend.h  vulkan_impeller_engine.h  vulkan_render_target.h  vulkan_resources.h  vulkan_vello_engine.h  win32_gdi_pool.h
src/native/jalium.native.vulkan/src/: text_cache.cpp  vulkan_impeller_engine.cpp  vulkan_render_target.cpp  vulkan_resources.cpp  vulkan_vello_engine.cpp  vulkan_video_surface.cpp  win32_gdi_pool.cpp
tests/Jalium.UI.Tests/: ApiAdditionsTests.cs  AudioStatsTests.cs  CalendarSwipeMonthTests.cs  CompositionInvalidationTests.cs  ControlsTouchActivationTests.cs  DisabledControlHoverTests.cs  EditControlEmojiSelectionTests.cs  EmojiTestStrings.cs  EncodingSupportTests.cs  ExtensionsAdditionsTests.cs  GestureRecognizerTests.cs  GraphemeClusterTests.cs  ImagePinchZoomTests.cs  KeyedServiceTests.cs  ManipulationBoundaryFeedbackTests.cs  ManipulationInertiaProcessorTests.cs  ManipulationMultiTouchTests.cs  MiniAudioDeviceTests.cs  NativeAudioDecoderTests.cs  PathShapeTests.cs  PointerIntermediatePointsTests.cs  PointerPointGetPositionTests.cs  RazorLightweightInterpreterTests.cs  RazorSyntaxTests.cs  RealTimeStylusAsyncTests.cs  RealTimeStylusThreadTests.cs  RenderTargetDrawingContextPixelSnapTests.cs  ScrollViewerManipulationAutoEnableTests.cs  SegmentedRadioHoverResidueTests.cs  TabControlSwipeTests.cs  TextBoxEmojiSelectionTests.cs  TextFileTests.cs  TextOptionsTests.cs  ToastNotificationTests.cs  TouchCapabilitiesTests.cs  TouchCaptureTests.cs  TouchHelperTests.cs  TouchHighFrequencyPacketsTests.cs  TouchModeOptionsTests.cs  TouchesOverChainTests.cs  (+1 more)
(+159 files in other folders)
